# subspace-pulsar-sdk

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: audit.yml  coverage.yml  push.yml  release.yml  rustdoc.yml
dsn/: Cargo.toml
dsn/src/: builder.rs  lib.rs  local_provider_record_utils.rs  provider_storage_utils.rs
examples/: complete.rs  gemini-3a.rs  gemini-3b.rs  gemini-3c.rs  mini-farmer.rs  simple.rs  sync.rs
farmer/: Cargo.toml
farmer/src/: combined_piece_getter.rs  lib.rs
implementors/sdk_traits/: trait.Farmer.js  trait.Node.js
node/: Cargo.toml
node/res/: chain-spec-raw-devnet.json  chain-spec-raw-gemini-3e.json
node/src/: builder.rs  chain_spec.rs  lib.rs
node/src/domains/: builder.rs  chain_spec.rs  core.rs  domain.rs  domain_genesis_block_builder.rs  domain_instance_starter.rs  evm_chain_spec.rs  mod.rs
node/src/domains/core_payments/: mod.rs
node/src/domains/eth_relayer/: chain_spec.rs  mod.rs
node/src/domains/evm/: chain_spec.rs  mod.rs
res/: chain-spec-raw-devnet.json  chain-spec-raw-gemini-3a.json  chain-spec-raw-gemini-3b.json  chain-spec-raw-gemini-3c.json  chain-spec-raw-gemini-3d.json
sdk_dsn/: all.html  enum.DsnBuilderError.html  fn.start_announcements_processor.html  index.html  sidebar-items.js  struct.Dsn.html  struct.DsnBuilder.html  struct.DsnOptions.html  struct.DsnShared.html  struct.FarmerPieceCache.html  struct.InConnections.html  struct.ListenAddresses.html  struct.NodePieceGetter.html  struct.OutConnections.html  struct.PendingInConnections.html  struct.PendingOutConnections.html  struct.TargetConnections.html  type.FarmerProviderStorage.html  type.LocalRecordProvider.html  type.NodePieceCache.html  type.NodeProviderStorage.html  type.PieceStore.html  type.ProviderStorage.html
sdk_dsn/builder/: type.PieceStore.html
sdk_farmer/: all.html  enum.BuildError.html  enum.SingleDiskFarmCreationError.html  enum.SingleDiskPlotCreationError.html  index.html  sidebar-items.js  struct.Builder.html  struct.CacheDescription.html  struct.CacheTooSmall.html  struct.Config.html  struct.Farm.html  struct.FarmDescription.html  struct.FarmInfo.html  struct.Farmer.html  struct.Info.html  struct.InitialPlottingProgress.html  struct.InitialPlottingProgressStream.html  struct.Plot.html  struct.PlotDescription.html  struct.PlotInfo.html  type.ProgressData.html
sdk_node/: all.html  enum.BuilderError.html  enum.Event.html  enum.SyncStatus.html  index.html  sidebar-items.js  struct.BlockHeader.html  struct.Builder.html  struct.ChainInfo.html  struct.Config.html  struct.Domain.html  struct.DomainConfig.html  struct.DomainConfigBuilder.html  struct.ExecutorDispatch.html  struct.Info.html  struct.Node.html  struct.PieceCacheSize.html  struct.PotConfiguration.html  struct.SegmentPublishConcurrency.html  struct.SyncingProgress.html  type.BlockNumber.html  type.ChainSpec.html  type.Hash.html  type.RewardsEvent.html  type.SubspaceEvent.html
sdk_node/chain_spec/: fn.dev_config.html  fn.devnet_config.html  fn.devnet_config_compiled.html  fn.gemini_3d.html  fn.gemini_3d_compiled.html  fn.gemini_3e.html  fn.gemini_3e_compiled.html  fn.gemini_3f.html  fn.gemini_3f_compiled.html  fn.gemini_3g.html  fn.gemini_3g_compiled.html  fn.local_config.html  index.html  struct.GenesisParams.html  type.ChainSpec.html
sdk_node/domains/: enum.ConfigBuilderError.html  index.html  sidebar-items.js  struct.BlockHeader.html  struct.Config.html  struct.ConfigBuilder.html  struct.ExecutorDispatch.html  struct.SystemDomainNode.html  type.ChainSpec.html
sdk_substrate/: all.html  enum.BaseBuilderError.html  enum.BlocksPruning.html  enum.ExecutionStrategy.html  enum.NetworkBuilderError.html  enum.OffchainWorkerBuilderError.html  enum.PruningMode.html  enum.Role.html  enum.RpcBuilderError.html  enum.RpcMethods.html  index.html  sidebar-items.js  struct.BaseBuilder.html  struct.Constraints.html  struct.ImplName.html  struct.ImplVersion.html  struct.MaxSubsPerConn.html  struct.Network.html  struct.NetworkBuilder.html  struct.OffchainWorker.html  struct.OffchainWorkerBuilder.html  struct.Rpc.html  struct.RpcBuilder.html  struct.StorageMonitor.html
sdk_substrate/types/: enum.ExecutionStrategy.html
sdk_traits/: all.html  index.html  trait.Farmer.html  trait.Node.html
sdk_utils/: all.html  enum.Ss58ParsingError.html  enum.TaskOutput.html  fn.is_default.html  fn.task_spawn.html  fn.task_spawn_blocking.html  index.html  macro.generate_builder.html  sidebar-items.js  struct.AsyncDropFutures.html  struct.ByteSize.html  struct.DestructorSet.html  struct.DropCollection.html  struct.Multiaddr.html  struct.MultiaddrWithPeerId.html  struct.PublicKey.html  struct.Rpc.html  struct.StorageKey.html
sdk_utils/chain_spec/: fn.chain_spec_properties.html  fn.get_account_id_from_seed.html  fn.get_public_key_from_seed.html  index.html
src/: farmer.rs  lib.rs  networking.rs  node.rs  utils.rs
src/dsn/: builder.rs  mod.rs
src/networking/: farmer_piece_receiver.rs  farmer_piece_storage.rs  farmer_provider_record_processor.rs  farmer_provider_storage.rs  mod.rs  node_piece_cache.rs  node_provider_storage.rs  piece_cache_utils.rs  provider_storage_utils.rs
src/node/: builder.rs  chain_spec.rs  farmer_rpc_client.rs  mod.rs
src/sdk_dsn/: builder.rs.html  lib.rs.html  local_provider_record_utils.rs.html  provider_storage_utils.rs.html
src/sdk_farmer/: combined_piece_getter.rs.html  (+1 more)
subspace_sdk/: all.html  enum.Ss58ParsingError.html  index.html  sidebar-items.js  struct.ByteSize.html  struct.FarmDescription.html  struct.FarmerBuilder.html  struct.FarmerInfo.html  struct.Multiaddr.html  struct.MultiaddrWithPeerId.html  struct.NodeBuilder.html  struct.NodeInfo.html  struct.PlotDescription.html  struct.PublicKey.html  type.Farm.html  type.Farmer.html  type.Node.html  type.Plot.html
substrate/: Cargo.toml
substrate/src/: lib.rs  types.rs
traits/: Cargo.toml
traits/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  rpc_client.rs
(+364 files in other folders)
