[package]
name = "subspace-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
backoff = "0.4"
base58 = "0.2"
blake2 = "0.10.5"
bytesize = "1.1"
bytesize-serde = "0.2"
derivative = "2.2.0"
derive_builder = "0.12"
derive_more = "0.99"
either = "1.8"
event-listener-primitives = "2.0.1"
futures = "0.3"
hex = "0.4.3"
hex-literal = "0.4"
jsonrpsee-core = "0.16"
libp2p-core = "0.39"
lru = "0.10"
names = { version = "0.14.0", default-features = false }
ouroboros = "0.15.5"
parity-db = "0.4"
parity-scale-codec = "3"
parking_lot = "0.12"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ss58-registry = "1.33"
static_assertions = "1.1.0"
thiserror = "1"
tokio = { version = "1.26", features = ["fs", "rt", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"

frame-support = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-informant = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63", default-features = false }
sc-state-db = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-storage-monitor = { version = "0.1.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63", default-features = false }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-core-hashing = { version = "5.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-runtime = { version = "7.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-session = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-storage = { version = "7.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-version = { version = "5.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }

core-eth-relay-runtime = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3", optional = true }
core-payments-domain-runtime = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3", optional = true }
cross-domain-message-gossip = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
domain-client-executor = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
domain-client-message-relayer = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
domain-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
domain-service = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
pallet-rewards = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
pallet-subspace = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
sc-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
sc-consensus-subspace-rpc = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
sc-subspace-chain-specs = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
sp-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
sp-domains = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
sp-objects = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-archiving = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-erasure-coding = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-proof-of-space = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-fraud-proof = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-runtime = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-service = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
subspace-transaction-pool = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3" }
system-domain-runtime = { git = "https://github.com/subspace/subspace", rev = "64c9356e285779d0c31cbd28a4a3d6358ac485b3", optional = true }

# The only triple tested and confirmed as working in `jemallocator` crate is `x86_64-unknown-linux-gnu`
[target.'cfg(all(target_arch = "x86_64", target_vendor = "unknown", target_os = "linux", target_env = "gnu"))'.dev-dependencies]
jemallocator = "0.5.0"

[target.'cfg(tokio_unstable)'.dev-dependencies]
console-subscriber = "0.1"

[features]
default = ["all"]
all = ["executor", "eth-relayer", "core-payments"]
executor = ["system-domain-runtime"]
eth-relayer = ["core-eth-relay-runtime"]
core-payments = ["core-payments-domain-runtime"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.26", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
fdlimit = "0.2"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
blst = { opt-level = 3 }
blst_from_scratch = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
k256 = { opt-level = 3 }
keccak = { opt-level = 3 }
kzg = { opt-level = 3 }
libm = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
subspace-archiving = { opt-level = 3 }
subspace-chiapos = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-erasure-coding = { opt-level = 3 }
subspace-farmer-components = { opt-level = 3 }
subspace-proof-of-space = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

# Reason: We need to patch substrate dependency of snowfork libraries to our fork
# TODO: Remove when we are using upstream substrate instead of fork
[patch."https://github.com/paritytech/substrate.git"]
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-std = { version = "5.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-io = { version = "7.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
sp-runtime = { version = "7.0.0", git = "https://github.com/subspace/substrate", rev = "fdb68194ab6995447610b3dbdee70559711dbd63" }
