[package]
name = "sdk-dsn"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derivative = "2.2.0"
derive_builder = "0.12"
derive_more = "0.99"
futures = "0.3"
hex = "0.4.3"
parking_lot = "0.12"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sc-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "f782f7297a6d61d8f22a3b10d201396fe30708fd" }
sdk-utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "f782f7297a6d61d8f22a3b10d201396fe30708fd" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "f782f7297a6d61d8f22a3b10d201396fe30708fd" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "f782f7297a6d61d8f22a3b10d201396fe30708fd" }
tracing = "0.1"

[features]
default = []
integration-test = [
    "sdk-utils/integration-test"
]
