[package]
name = "sdk-dsn"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derivative = "2.2.0"
derive_builder = "0.12"
derive_more = "0.99"
futures = "0.3"
hex = "0.4.3"
parking_lot = "0.12"
prometheus-client = "0.22.0"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sc-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "2ba5de0bb6886b088f0b956b621d53ae05b5ad6d" }
sdk-utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "892bf8e938c6bd2b893d3827d1093cd81baa59a1" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "2ba5de0bb6886b088f0b956b621d53ae05b5ad6d" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "2ba5de0bb6886b088f0b956b621d53ae05b5ad6d" }
tracing = "0.1"

[features]
default = []
integration-test = [
    "sdk-utils/integration-test"
]
